--- a/Source/Makefile
+++ b/Source/Makefile
@@ -3,7 +3,7 @@ VASM=vasmm68k_mot
 all: maprom fastram blitfix
 
 clean:
-	rm -f *.o fastram.prg maprom.prg
+	rm -f *.o fastram.prg maprom.prg blitfix.prg
 
 maprom:
 	$(VASM) -Ftos -devpac -tos-flags=0 -monst MAPROM.S -o maprom.prg
