--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ mapfile
 src/fpemu/obj/
 src/mon/obj/
 src/ext/libcmini/build/
-src/ext/stripx
+src/ext/stripx/stripx
 src/ext/vasm/obj/
 src/ext/vasm/vasmm68k_mot
 src/ext/vasm/vobjdump
