--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 mapfile
+dist/
+bin/
 src/fpemu/obj/
 src/mon/obj/
 src/ext/libcmini/build/
 src/ext/stripx/stripx
-src/ext/vasm/obj/
+src/ext/vasm/obj/*.o
 src/ext/vasm/vasmm68k_mot
 src/ext/vasm/vobjdump
 
