--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@ src/ext/stripx/stripx
 src/ext/vasm/obj/*.o
 src/ext/vasm/vasmm68k_mot
 src/ext/vasm/vobjdump
-
+*.o
+src/dmatest/
 src/tfctrl/
-tf536.prg
 src/fastram/
 src/ext/gemlib/
 src/ext/parcp421/
