--- a/src/maprom/Makefile
+++ b/src/maprom/Makefile
@@ -1,37 +1,21 @@
-#Makefile
-OUT_DIR=../..
-VASM=../ext/vasm/vasmm68k_mot
-FLAGS=-Ftos -devpac -tos-flags=0 -monst
+NAME = MAPROM
 
-TARGETS = \
-	$(OUT_DIR)/fastram.prg \
-	$(OUT_DIR)/fastram.txt \
-	$(OUT_DIR)/maprom.prg \
-	$(OUT_DIR)/maprom.txt \
-	$(OUT_DIR)/maprom_c.prg
+BIN = maprom.prg
+DOC = maprom.txt
 
-all: clean $(TARGETS)
+SRC = 	../common/tf53x.c \
+		../common/fastram.c \
+		../common/mmu.c \
+		main.c \
+		settings.c \
+		card_TF536r2.c \
+		card_TF536r2asm.S \
+		card_DFB1.c
 
-clean:
-	rm -f *.o $(TARGETS)
+#DEFS += -DDEBUG
 
-$(OUT_DIR)/fastram.prg:
-	rm -f *.o
-	$(VASM) $(FLAGS) -DOPT_MMU=0 -DOPT_STRAM_CI=1 -DOPT_RELO_ROM=0 -DOPT_RELO_RAM=0 MAPROM.S -o $@
+include ../common/Makefile.common
 
-$(OUT_DIR)/fastram.txt: fastram.txt
-	cp $< $@
+$(OBJ_DIR)/api_funcs.o : api_funcs.c
+	$(CC) $(INCLUDE) $(CPUFLAGS) $(CXXFLAGS) -mpcrel -c $< -o $@
 
-$(OUT_DIR)/maprom.prg:
-	rm -f *.o
-	$(VASM) $(FLAGS) -DOPT_MMU=1 -DOPT_STRAM_CI=1 -DOPT_RELO_ROM=1 -DOPT_RELO_RAM=1 MAPROM.S -o $@
-
-$(OUT_DIR)/maprom.txt: maprom.txt
-	cp $< $@
-
-$(OUT_DIR)/maprom_c.prg:
-	rm -f *.o
-	$(VASM) $(FLAGS) -DOPT_MMU=1 -DOPT_STRAM_CI=0 -DOPT_RELO_ROM=1 -DOPT_RELO_RAM=1 MAPROM.S -o $@
-
-$(VASM):
-	cd ../ext/vasm && make CPU=m68k SYNTAX=mot
